test/scc_test/decl/semantic-errors/035.t
struct A
{
    int x;
};

union A
{
    int x;
};